# proto-multi

./: .gitignore  TODO.md  package.json  start-system.sh  test_mcp_direct.py  todo.md
.claude/: settings.local.json
computer-use-mcp-server/: .gitignore  ARCHITECTURE.md  DISTRIBUTION.md  IMPROVEMENTS.md  QUICK_START.md  README.md  SUMMARY.md  VERIFICATION_GUIDE.md  cleanup_orphans.sh  pyproject.toml  setup.sh
computer-use-mcp-server/src/computer_use_mcp/: __init__.py  server.py
control-plane/: .dockerignore  .env.example  .railwayignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  MVP_README.md  README.md  SETUP.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  start.sh  todo.md
control-plane/app/: __init__.py  config.py  main.py
control-plane/app/api/: apikeys.py  auth.py  instances.py  payments.py
control-plane/app/auth/: jwt.py  middleware.py
control-plane/app/db/: connection.py  models.py
control-plane/app/db/migrations/: 001_initial.sql
control-plane/app/middleware/: instance_ownership.py
control-plane/app/orchestrator/: ec2.py  user_data.sh
control-plane/app/proxy/: cloudbot.py  vnc.py
control-plane/app/utils/: encryption.py
control-plane/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
control-plane/frontend/src/: App.tsx  index.css  main.tsx
control-plane/frontend/src/contexts/: AuthContext.tsx  InstanceContext.tsx  SubscriptionContext.tsx  ThemeContext.tsx
control-plane/scripts/: deploy-openclaw.sh
(+847 files in other folders)
