[project]
name = "computer-use-mcp"
version = "0.1.0"
description = "MCP server providing computer use capabilities (screenshot, mouse, keyboard) for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.21.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
computer-use-mcp = "computer_use_mcp.server:main"
